# hasher

./: Cargo.toml  readme.md
src/: main.rs  sha3_utils.rs
